cmake_minimum_required(VERSION 3.5)
project(teensy_gfx_src_root C CXX)
cmake_policy(SET CMP0077 NEW)
IF (DEFINED BUILD_FOR_TEENSY)
    import_arduino_library(cores ${COREPATH})
ELSE()
    include(cmake_declare_and_fetch.cmake.in)
    set(BUILD_SHARED_LIBRARY ON)
    set(REDIRECT_SERIAL_OUT_TO_STD_OUT OFF)
    DeclareAndFetch(teensy_x86_stubs            https://github.com/newdigate/teensy-x86-stubs.git feature/shared_serial src)
ENDIF()

add_subdirectory(src)
add_subdirectory(examples/basic)