cmake_minimum_required(VERSION 3.5)
project(teensy_gfx_src_root C CXX)
cmake_policy(SET CMP0077 NEW)
set(CMAKE_CXX_STANDARD 17)
IF (DEFINED BUILD_FOR_TEENSY)
    import_arduino_library(cores ${COREPATH})
ELSE()
    include(cmake_declare_and_fetch.cmake.in)
    DeclareAndFetch(teensy_x86_stubs            https://github.com/newdigate/teensy-x86-stubs.git noinstall src)
ENDIF()

add_subdirectory(src)
IF (BUILD_EXAMPLES)
    add_subdirectory(examples/basic)
ENDIF ()